HYD-1382 Access to online help needs to be more visible - remove (?) help link at upper right - add help link to main tabbed nav - flip .navigation borders to allow for easy hiding of last nav - prevent backbone from taking over the link by using a .skip_router class to .navigation elements - remove defunct .header_help_link css

--- a/chroma-manager/chroma_ui/static/css/header.css
+++ b/chroma-manager/chroma_ui/static/css/header.css
@@ -37,11 +37,6 @@ span#user_info{
     margin-right: 12px;
 }
 
-span.header_help_link {
-    float: right;
-    margin-right: 12px;
-}
-
 span#authenticated{
     float:left;
 }
